# AlgoVis

./: .gitignore  .gitlab-ci.yml  AlgoManager.hpp  AlgoVis.sln  AlgoWatcher.hpp  ArrayDrawer.hpp  CMakeLists.txt  HUD.cpp  HUD.hpp  Makefile  Settings.cpp  Settings.hpp  TickWatcher.hpp  Visualizator.cpp  Visualizator.hpp  main.cpp  settings.json  utils.hpp
AlgoVis/: AlgoManager.hpp  AlgoVis.vcxproj  AlgoVis.vcxproj.filters  AlgoWatcher.hpp  ArrayDrawer.cpp  ArrayDrawer.hpp  HUD.cpp  HUD.hpp  SelectionSort.hpp  Settings.cpp  Settings.hpp  SortAlgorithm.hpp  SortAlgorithmFactory.hpp  TickWatcher.hpp  Visualizator.cpp  Visualizator.hpp  main.cpp  settings.json  sorts.hpp  utils.hpp
Algorithms/: Algorithms.hpp  BubbleSort.hpp  SelectionSort.hpp  SortAlgorithm.hpp  SortAlgorithmFactory.hpp
